--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "schedule-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "simple scheduling API",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test",
     "start": "node app.js"
   },
-  "author": "",
+  "author": "Nathnael Fikru",
   "license": "ISC",
   "dependencies": {
     "async": "^2.6.0",
@@ -21,12 +21,16 @@
     "swagger-ui-express": "^2.0.15"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
     "eslint": "^4.18.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "nodemon": "^1.15.1"
+    "mocha": "^5.0.1",
+    "nodemon": "^1.15.1",
+    "sinon": "^4.4.2",
+    "sinon-chai": "^2.14.0"
   }
 }
